--- a/ozonProsess.html
+++ b/ozonProsess.html
@@ -19,13 +19,14 @@
         }
     </style>
 </head>
-<body class="bg-gradient-to-b from-sky-800 to-indigo-900 text-white min-h-screen flex flex-col items-center justify-center p-4">
+<body class="bg-gradient-to-b from-sky-800 to-indigo-900 text-white min-h-screen flex flex-col items-center justify-center p-4 relative">
 
     <div class="absolute top-0 left-1/2 -translate-x-1/2 w-64 h-64 bg-yellow-300 rounded-full sun-glow -mt-32"></div>
     
-    <div class="text-center w-full max-w-5xl">
+    <div class="absolute top-8 left-1/2 -translate-x-1/2 w-full max-w-5xl text-center z-10">
         <h1 class="text-3xl md:text-4xl font-bold text-white tracking-tight">Ozonlagets Naturlige Livssyklus</h1>
         <p class="text-sky-200 mt-2">En visuell forklaring av hvordan ozon dannes og brytes ned.</p>
+        <p class="text-sky-200 mt-2">Laget av Elisabeth Engum ved hjelp av Gemini Canvas, 12.september 2025.</p>
     </div>
 
     <div class="w-full max-w-5xl aspect-video relative rounded-lg overflow-hidden shadow-2xl bg-black bg-opacity-20 my-4">
@@ -338,4 +339,5 @@
 
 </body>
 </html>
+
 
