Modify text for trade winds and add description
Updated text labels and added explanation for animation focus.

--- a/JordensPuls/GlobalAtmoSirk.html
+++ b/JordensPuls/GlobalAtmoSirk.html
@@ -135,7 +135,7 @@
                 <g id="trade-winds" class="clickable">
                      <title>Passatvindene</title>
                     <rect x="150" y="510" width="180" height="40" fill="transparent"/>
-                    <text x="190" y="510" fill="white" font-size="18">Passatvinder (Østlige)</text>
+                    <text x="190" y="510" fill="white" font-size="18">Passatvinder (Nord-østlige)</text>
                 </g>
                 
                 <g id="westerlies" class="clickable">
@@ -185,6 +185,8 @@
                     Dette er en interaktiv modell av jordens generelle atmosfæriske sirkulasjon.
                     <br><br>
                     Solen varmer opp ekvator mer enn polene, noe som skaper temperaturforskjeller som driver globale vindsystemer. Denne bevegelsen av luft fordeler varme over hele planeten.
+                    <br><br>
+                    Denne animasjonen fokuserer på den nordlige halvkule, men vi finner tilsvarende for den sørlige halvkule.
                     <br><br>
                     <strong>Klikk på et av elementene i diagrammet til venstre</strong> for å lære mer om de ulike delene av dette komplekse systemet.
                 </p>
