Add footer with author information and date

--- a/JordensPuls/GlobalAtmoSirk.html
+++ b/JordensPuls/GlobalAtmoSirk.html
@@ -284,7 +284,9 @@
         });
 
     </script>
-
+    <footer class="absolute bottom-0 w-full text-center p-2 text-gray-500 text-xs">
+        Laget av Elisabeth Engum, ved hjelp av Gemini Canvas, den 15.september 2025.
+    </footer>
 </body>
 </html>
 
