Update descriptions for atmospheric cells

--- a/JordensPuls/GlobalAtmoSirk.html
+++ b/JordensPuls/GlobalAtmoSirk.html
@@ -213,7 +213,7 @@
                 description: `Polarcellen er den minste og svakeste av de tre cellene, og ligger mellom ca. 60° breddegrad og polene. Polarcellen er også en konveksjonscelle.
                 <br><br><strong>1. Nedsynking:</strong> Kald, tett luft synker over polene, noe som skaper et høytrykksområde.
                 <br><br><strong>2. Bevegelse mot ekvator:</strong> Ved overflaten strømmer den kalde luften bort fra polene. Corioliskraften bøyer denne vinden mot vest, og skaper de polare østavindene.
-                <br><br><strong>3. Stigning:</strong> Rundt 60° breddegrad møter den kalde polarluften den varmere luften fra Ferrelcellen. Den lettere, varmere luften blir tvunget til å stige over den kaldere luften. Dette området kalles polarfronten og er preget av lavtrykkssystemer.`
+                <br><br><strong>3. Stigning:</strong> Rundt 60° breddegrad møter den kalde polarluften den varmere luften fra subtropiske strøk. Den lettere, varmere luften blir tvunget til å stige over den kaldere luften. Dette området kalles polarfronten og er preget av lavtrykkssystemer.`
             },
             'itcz': {
                 title: 'Den intertropiske konvergenssonen (ITCZ)',
@@ -225,7 +225,7 @@
             },
             'subpolar-low': {
                 title: 'Subpolart lavtrykk / Polarfronten',
-                description: `Dette er en sone med lavtrykk rundt 60° breddegrad. Her møtes den kalde, tette polarluften (fra Polarcellen) og den varmere, lettere luften fra midlere breddegrader (fra Ferrelcellen). Grensen mellom disse to luftmassene kalles polarfronten. Den varme luften blir tvunget til å stige over den kalde, noe som fører til ustabilt vær, skyer, nedbør og utvikling av de store lavtrykkssystemene som ofte påvirker været i Norge. Vi kaller det et dynamisk lavtrykk.`
+                description: `Dette er en sone med lavtrykk rundt 60° breddegrad. Her møtes den kalde, tette polarluften fra polare strøk i nord og den varmere, lettere luften fra midlere breddegrader i sør. Grensen mellom disse to luftmassene kalles polarfronten. Den varme luften blir tvunget til å stige over den kalde, noe som fører til ustabilt vær, skyer, nedbør og utvikling av de store lavtrykkssystemene som ofte påvirker været i Norge. Vi kaller det et dynamisk lavtrykk.`
             },
             'polar-high': {
                 title: 'Polart høytrykk',
