Update GitHub username and repository name

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
         // --- KONFIGURASJON ---
         // ENDRE VERDIENE UNDER FOR Å PASSE DITT PROSJEKT
 
-        const GITHUB_USERNAME = "DIN_BRUKERNAVN"; // Bytt ut med ditt GitHub-brukernavn
-        const GITHUB_REPO_NAME = "DITT_REPO_NAVN"; // Bytt ut med navnet på ditt repository
-        const FOLDER_PATH = "mappenavn"; // Bytt ut med navnet på mappen du vil liste filer fra. La stå som "" for roten.
+        const GITHUB_USERNAME = "PGelisa"; // Bytt ut med ditt GitHub-brukernavn
+        const GITHUB_REPO_NAME = "DynamiskKI"; // Bytt ut med navnet på ditt repository
+        const FOLDER_PATH = ""; // Bytt ut med navnet på mappen du vil liste filer fra. La stå som "" for roten.
         const PAGE_TITLE = "Mine Prosjekter"; // Tittelen som skal vises på siden
 
         // --- SLUTT PÅ KONFIGURASJON ---
