Update FOLDER_PATH to empty string in index.html

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
         const GITHUB_USERNAME = "PGelisa"; // Bytt ut med ditt GitHub-brukernavn
         const GITHUB_REPO_NAME = "DynamiskKI"; // Bytt ut med navnet på ditt repository
-        const FOLDER_PATH = "JordensPuls"; // Bytt ut med navnet på mappen du vil liste filer fra. La stå som "" for roten.
+        const FOLDER_PATH = ""; // Bytt ut med navnet på mappen du vil liste filer fra. La stå som "" for roten.
         const PAGE_TITLE = "Mine Prosjekter"; // Tittelen som skal vises på siden
 
         // --- SLUTT PÅ KONFIGURASJON ---
