Update GitHub username and repository name

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 
     <script>
         // --- KONFIGURASJON ---
-        const GITHUB_USERNAME = "DIN_BRUKERNAVN"; // Bytt ut med ditt GitHub-brukernavn
-        const GITHUB_REPO_NAME = "DITT_REPO_NAVN"; // Bytt ut med navnet på ditt repository
+        const GITHUB_USERNAME = "PGelisa"; // Bytt ut med ditt GitHub-brukernavn
+        const GITHUB_REPO_NAME = "DynamiskKI"; // Bytt ut med navnet på ditt repository
         // Valgfri: Spesifiser en startmappe. La stå som "" for å starte i roten av prosjektet.
         const ROOT_FOLDER_PATH = ""; 
-        const PAGE_TITLE = "Mine Prosjekter"; // Tittelen som skal vises på siden
+        const PAGE_TITLE = "Mine KI-prosjekter"; // Tittelen som skal vises på siden
         // --- SLUTT PÅ KONFIGURASJON ---
 
         // Funksjon for å hente og vise filene
