--- a/Geografi/VaerYtrekraftRepetisjon.html
+++ b/Geografi/VaerYtrekraftRepetisjon.html
@@ -36,7 +36,7 @@
 
     <div class="max-w-3xl mx-auto py-10 px-4">
         <header id="quiz-header" class="text-center mb-10">
-            <h1 class="text-3xl font-bold text-blue-800">Geografi Vg1: Repetisjon</h1>
+            <h1 class="text-3xl font-bold text-blue-800">Repetisjon Geografi Vg1: Vær og Klima</h1>
             <p class="text-gray-600 mt-2">Vind, nedbør, ekstremvær og klimasoner</p>
             
             <div class="flex justify-center gap-4 mt-4">
